// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resources Page render account scope 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-large StyledProps--padding-right-large"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
      level="2"
    >
      resources
    </h2>
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <a
          class="tags"
          href="/account/dummy/admin/resources/connectors"
        >
          connectorsLabel
        </a>
        <a
          class="tags"
          href="/account/dummy/admin/resources/secrets"
        >
          common.secrets
        </a>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
  >
    hello
  </div>
</div>
`;

exports[`Resources Page render org scope 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-large StyledProps--padding-right-large"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
      level="2"
    >
      resources
    </h2>
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <a
          class="tags"
          href="/account/dummy/admin/organizations/dummy/resources/connectors"
        >
          connectorsLabel
        </a>
        <a
          class="tags"
          href="/account/dummy/admin/organizations/dummy/resources/secrets"
        >
          common.secrets
        </a>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
  >
    hello
  </div>
</div>
`;

exports[`Resources Page render project scope 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-large StyledProps--padding-right-large"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
      level="2"
    >
      resources
    </h2>
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <a
          class="tags"
          href="/account/dummy/projects/dummy/orgs/dummy/admin/resources/connectors"
        >
          connectorsLabel
        </a>
        <a
          class="tags"
          href="/account/dummy/projects/dummy/orgs/dummy/admin/resources/secrets"
        >
          common.secrets
        </a>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
  >
    hello
  </div>
</div>
`;
